# qbittorrent-mcp

./: .gitignore  README.md  pyproject.toml  qbittorrent_mcp.py
