[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qbittorrent-mcp"
version = "0.1.0"
description = "QBittorrent MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.1",
]

[project.scripts]
qbittorrent-mcp = "qbittorrent_mcp:main"

[tool.setuptools]
py-modules = ["qbittorrent_mcp"]
